chore: updates readme to run init.sh from relative path. adds shebang to init.sh and changes mode so that it is executable. adds ext-grpc requirement so that developers know to install the grpc extension before running tests. adds composer autoload-dev section which includes Index.php (for runtime checks) and (lazily) builds a classmap of test assets. alters phpunit version so that newer versions can be installed. renames phpunit.xml to phpunit.xml.dist, as is convention. ignores phpunit.xml so that developers can copy the dist and modify it without potentially shipping the change. drop include/require statements from test code, since composer autoloader handles them. remove test output and adjust phpunit config to be more strict about output. add phpunit config xsd so that we get completion on nodes and attributes (and their values) when editing. renames integration test suite. adds whitelist to phpunit config so that coverage reports can be generated on demand. adds composer scripts to run tests and coverage reports.

--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,25 @@
       "Protos\\": "fabric-client/src/lib/protosPHP/Protos"
     }
   },
+  "autoload-dev": {
+    "classmap": [
+      "test"
+    ],
+    "files": [
+      "fabric-client/Index.php"
+    ]
+  },
   "require": {
+    "ext-grpc": "*",
     "grpc/grpc": "^v1.3.0",
     "google/protobuf": "^v3.3.0",
     "mdanter/ecc": "^v0.4.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.0.*"
+    "phpunit/phpunit": "^6.0"
+  },
+  "scripts": {
+    "coverage": "vendor/bin/phpunit --coverage-text",
+    "test": "vendor/bin/phpunit"
   }
 }
