chore: Composer package names should include a namespace.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fabric-sdk-php",
+  "name": "americanexpress/fabric-sdk-php",
   "description": "Hyperledger fabric client SDK in PHP",
   "type": "library",
   "homepage": "http://americanexpress.io/",
