refactor: moves source from sub-directory to root `src` directory, and adjusts autoloader to match. replaces src config file with a private class constant. moves index.php to root, temporarily. long-term this package must not be concerned with where the package root is and we must not define a ROOTPATH constant.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   },
   "autoload": {
     "psr-4": {
-      "AmericanExpress\\HyperledgerFabricClient\\": "fabric-client/src/lib",
+      "AmericanExpress\\HyperledgerFabricClient\\": "src",
       "Google\\": "protobuf/dist/Google",
       "GPBMetadata\\": "protobuf/dist/GPBMetadata",
       "Hyperledger\\": "protobuf/dist/Hyperledger"
@@ -21,7 +21,7 @@
       "test"
     ],
     "files": [
-      "fabric-client/Index.php"
+      "index.php"
     ]
   },
   "require": {
