--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,7 +22,7 @@
     </testsuites>
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>fabric-client/src</directory>
+            <directory>src</directory>
         </whitelist>
     </filter>
 </phpunit>
