--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,8 @@
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
-         syntaxCheck="false">
+         syntaxCheck="false"
+         verbose="true">
     <testsuites>
         <testsuite name="unit">
             <directory suffix=".php">./test/unit/test</directory>
