--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
   "require": {
     "php": "^7.1",
     "ext-grpc": "*",
-    "grpc/grpc": "^v1.3.0",
     "google/protobuf": "^v3.3.0",
+    "grpc/grpc": "^v1.3.0",
+    "igorw/get-in": "^1.0",
     "mdanter/ecc": "^v0.4.2"
   },
   "require-dev": {
