--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   "scripts": {
     "build": "composer lint:syntax && composer lint:style && composer coverage && composer test:mutations",
     "lint:beautify": "vendor/bin/phpcbf --standard=PSR2 --extensions=php -v src/ test/",
-    "lint:style": "vendor/bin/phpcs --standard=PSR2 --extensions=php -v src/ test/",
+    "lint:style": "vendor/bin/phpcs --standard=PSR2 --extensions=php -v src/ test/ --ignore=test/integration/config.php",
     "lint:syntax": "vendor/bin/parallel-lint src/ protobuf/dist/ test/",
     "protoc": "bin/compile-protos.sh",
     "test:integration": "vendor/bin/phpunit --testsuite integration",
