refactor: move txid generation into Hash to further eliminate dependencies.

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   "require": {
     "php": "^7.1",
     "ext-grpc": "*",
+    "beberlei/assert": "^2.0",
     "google/protobuf": "^v3.3.0",
     "grpc/grpc": "^v1.3.0",
     "igorw/get-in": "^1.0",
