refactor: generic and awkwardly named crypto class and namespace has been split up into Signatory, Transaction (Context and Generator), and Serializer responsibilities.

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "test:integration": "vendor/bin/phpunit --testsuite integration",
     "test:mutations": "vendor/bin/humbug",
     "test:units": "vendor/bin/phpunit --testsuite unit",
-    "coverage": "vendor/bin/phpunit --testsuite unit --coverage-text",
+    "coverage": "vendor/bin/phpunit --testsuite unit --coverage-text --coverage-html=build/coverage/html",
     "test": "vendor/bin/phpunit --testsuite unit"
   }
 }
