test: replaces e2e-utils (integration test asset) with two integration tests demonstrating the simple and complex chaincode-query usages.

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "AmericanExpressTest\\HyperledgerFabricClient\\TestAsset\\": "test/unit/TestAsset",
-      "AmericanExpressTest\\Integration\\TestAsset\\": "test/integration/TestAsset"
+      "AmericanExpressTest\\HyperledgerFabricClient\\TestAsset\\": "test/unit/TestAsset"
     }
   },
   "require": {
