fix(php72): adds support for php72 by updating MdanterEccSignatory dependencies and adjusting signature implementation. bumps min version of beberlei/assert so that the min ver build works in Travis. updates Travis config to install grpc via pecl, and added some more lint and docs jobs.

--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
   "require": {
     "php": "^7.1",
     "ext-grpc": "*",
-    "beberlei/assert": "^2.0",
+    "beberlei/assert": "^2.6",
     "google/protobuf": "^v3.5.0",
     "grpc/grpc": "^v1.3.0",
     "igorw/get-in": "^1.0",
-    "mdanter/ecc": "^v0.4.2"
+    "mdanter/ecc": "^v0.5.0"
   },
   "require-dev": {
     "humbug/humbug": "1.0.x-dev",
@@ -50,7 +50,7 @@
     "protoc": "bin/compile-protos.sh",
     "test:integration": "vendor/bin/phpunit -c test/integration",
     "test:mutations": "vendor/bin/humbug && cat humbuglog.txt",
-    "coverage": "vendor/bin/phpunit --coverage-text --coverage-html=build/coverage/html",
+    "coverage": "vendor/bin/phpunit --coverage-text --coverage-html=build/coverage/html --coverage-clover=build/coverage/clover.xml",
     "test": "vendor/bin/phpunit"
   }
 }
