--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
   - DEPS=latest
   - DEPS=lowest
 
+before_install:
+  - pecl install grpc
+
 install:
   - if [[ $DEPS == 'latest' ]]; then travis_retry composer update --no-interaction --prefer-source ; fi
   - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --no-interaction --prefer-source --prefer-lowest ; fi
@@ -20,6 +23,16 @@ jobs:
   allow_failures:
     - php: nightly
   include:
+    - stage: lint
+      php: 7.1
+      script:
+        - composer install --no-interaction --prefer-source
+        - composer validate
+    - stage: lint
+      php: 7.1
+      script:
+        - composer install --no-interaction --prefer-source
+        - composer lint:final
     - stage: lint
       php: 7.1
       script:
@@ -39,5 +52,9 @@ jobs:
       php: 7.1
       script:
         - composer install --no-interaction --prefer-source
-        - composer require --dev humbug/humbug:^1.0@dev
         - composer test:mutations
+    - stage: docs
+      php: 7.1
+      script:
+        - composer install --no-interaction --prefer-source
+        - composer docs
