--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,10 @@ jobs:
       php: 7.1
       script:
         - composer install --no-interaction --prefer-source
+        - composer require --dev php-coveralls/php-coveralls --no-interaction
         - composer coverage
+      after_success:
+        - travis_retry php vendor/bin/coveralls
     - stage: big-test
       php: 7.1
       script:
