--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
     "jakub-onderka/php-parallel-lint": "*",
     "mikey179/vfsStream": "^1.6",
     "ocramius/finalizer": "^1.0",
-    "phpunit/phpunit": "*",
+    "phpunit/phpunit": "^6.4",
     "sami/sami": "^4.0",
-    "squizlabs/php_codesniffer": "*"
+    "squizlabs/php_codesniffer": "^3.1"
   },
   "scripts": {
     "build": "composer lint:syntax && composer lint:style && composer lint:final && composer coverage && composer test:mutations && composer docs",
